# cliplens

./: .gitignore  README.md  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: previewCache.ts  types.ts  utils.ts
src/lib/components/: ClipItem.svelte  Footer.svelte  PreviewPanel.svelte  SetupScreen.svelte
src/routes/: +page.svelte
